--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register 4</h2> <!--heeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee-->
+    <h2 id="formTitle">Register 5</h2> <!--heeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee-->
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -99,11 +99,15 @@
       const endpoint = isRegistering ? "/register" : "/login";
 
       try {
-        const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ email, password }),
-        });
+        const apiURL = `https://beemazing.onrender.com${endpoint}`;
+console.log("▶ Sending request to:", apiURL);
+
+const res = await fetch(apiURL, {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ email, password }),
+});
+
 
         const data = await res.json();
 
