--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register 2</h2>
+    <h2 id="formTitle">Register 3</h2> <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -100,23 +100,11 @@
 
       try {
         const apiURL = `https://beemazing.onrender.com${endpoint}`;
-        console.log("▶ Sending request to:", apiURL);
-
-        // Show a loading message to handle Render.com spin-up delay
-        message.style.color = "#FFC107";
-        message.textContent = "⏳ Connecting to server, please wait...";
-
-        const controller = new AbortController();
-        const timeoutId = setTimeout(() => controller.abort(), 10000); // 10 seconds timeout
-
         const res = await fetch(apiURL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email, password }),
-          signal: controller.signal
         });
-
-        clearTimeout(timeoutId);
 
         const data = await res.json();
 
@@ -132,8 +120,9 @@
           message.textContent = "❌ " + (data.message || "Something went wrong");
         }
       } catch (err) {
+        console.error(err);
         message.style.color = "#D32F2F";
-        message.textContent = "❌ " + (err.message === "Failed to fetch" ? "Error connecting to server" : err.message);
+        message.textContent = "❌ Error connecting to server";
       }
     });
   </script>
