--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register Z3</h2>
+    <h2 id="formTitle">Register Z4</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -112,7 +112,7 @@
           message.textContent = isRegistering ? "✅ Registered successfully!" : "✅ Logged in!";
           
           setTimeout(() => {
-            window.location.href = "/mobile/1-Home/home.html";
+            window.location.href = "mobile/1-Home/home.html";
           }, 1000);
         } else {
           message.style.color = "#D32F2F";
