--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -459,15 +459,16 @@ body {
     <script src="/BeeMazing-Y1/web/1-Home/home.js"></script>
 
     <!-- 🎯 Invite User Modal -->
-<div id="inviteUserModal" class="modal" style="display:none;">
-    <div class="sell-modal-content">
-      <h3 style="margin-bottom: 12px;">Invite a New User</h3>
-      <input type="email" id="inviteEmail" placeholder="Email" required />
-      <input type="text" id="inviteName" placeholder="Name" required />
-      <input type="text" id="inviteTempPassword" placeholder="Temporary Password" required />
-      <button id="sendInviteBtn">Send Invite</button>
-    </div>
-  </div>
+    <div id="inviteUserModal" class="modal">
+        <div class="modal-content">
+          <h3 style="margin-bottom: 12px;">Invite a New User</h3>
+          <input type="email" id="inviteEmail" placeholder="Email" required />
+          <input type="text" id="inviteName" placeholder="Name" required />
+          <input type="text" id="inviteTempPassword" placeholder="Temporary Password" required />
+          <button id="sendInviteBtn">Send Invite</button>
+        </div>
+      </div>
+      
   
 </body>
 </html>
