--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register Z11</h2>
+    <h2 id="formTitle">Register Z1</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -106,15 +106,15 @@
       const endpoint = isRegistering ? "/register" : "/login";
   
       try {
-        const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            email,
-            password,
-            adminEmail: invitedAdmin || email
-          }),
-        });
+        const body = isRegistering
+  ? { email, password } // Only email/password for admin registration
+  : { email, password, adminEmail: invitedAdmin || email }; // Only needed on login
+
+const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify(body),
+});
   
         const data = await res.json();
   
