--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register Z111</h2>
+    <h2 id="formTitle">Register Z111111111</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -120,6 +120,8 @@ const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
 });
   
         const data = await res.json();
+        console.log("📥 Login response:", data);
+
   
         if (res.ok && data.success) {
           message.style.color = "#4CAF50";
