--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register Z11</h2>
+    <h2 id="formTitle">Register Z111</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -124,28 +124,35 @@ const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
 
   
         if (res.ok && data.success) {
-          message.style.color = "#4CAF50";
-          message.textContent = isRegistering ? "✅ Registered successfully!" : "✅ Logged in!";
-  
-          if (data.role === "admin") {
-  localStorage.setItem("isAdmin", "true");
-  localStorage.setItem("currentAdminEmail", email);
-  setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
-} else if (data.role === "user" && data.username) {
-  const cleanAdmin = (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") ? invitedAdmin : email;
+  message.style.color = "#4CAF50";
+  message.textContent = isRegistering ? "✅ Registered successfully!" : "✅ Logged in!";
 
-  localStorage.setItem("isAdmin", "false");
-  localStorage.setItem("currentAdminEmail", cleanAdmin);
-  localStorage.setItem("currentUser", data.username);
+  if (isRegistering) {
+    // registration is always for admin
+    localStorage.setItem("isAdmin", "true");
+    localStorage.setItem("currentAdminEmail", email);
+    setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
+  } else if (data.role === "admin") {
+    localStorage.setItem("isAdmin", "true");
+    localStorage.setItem("currentAdminEmail", email);
+    setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
+  } else if (data.role === "user" && data.username) {
+    const cleanAdmin = (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") ? invitedAdmin : email;
 
-  setTimeout(() => {
-    window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${data.username}`;
-  }, 1000);
-} else {
-  console.error("⚠️ Unknown role or missing username:", data);
-  message.style.color = "#D32F2F";
-  message.textContent = "❌ Login failed: Unexpected response";
-}
+    localStorage.setItem("isAdmin", "false");
+    localStorage.setItem("currentAdminEmail", cleanAdmin);
+    localStorage.setItem("currentUser", data.username || invitedUser || "unknown");
+
+
+    setTimeout(() => {
+      window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${data.username}`;
+    }, 1000);
+  } else {
+    console.error("⚠️ Unknown role or missing username:", data);
+    message.style.color = "#D32F2F";
+    message.textContent = "❌ Login failed: Unexpected response";
+  }
+
 
 
         } else {
