--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register Z111</h2>
+    <h2 id="formTitle">Register Z4</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -84,13 +84,17 @@
   
     const urlParams = new URLSearchParams(window.location.search);
     const invitedAdmin = urlParams.get("admin");
-const invitedUser = urlParams.get("user");
-
-// Only set invited admin if it's a real value (not "null" or "undefined")
-if (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") {
-  localStorage.setItem("currentAdminEmail", invitedAdmin);
-}
-
+    const invitedUser = urlParams.get("user");
+  
+    // ✅ Determine clean admin value
+    const cleanAdmin = (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined")
+      ? invitedAdmin
+      : null;
+  
+    // ✅ If valid, store admin email
+    if (cleanAdmin) {
+      localStorage.setItem("currentAdminEmail", cleanAdmin);
+    }
   
     const form = document.getElementById("authForm");
     const message = document.getElementById("message");
@@ -110,56 +114,48 @@ if (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") {
   
       try {
         const body = isRegistering
-  ? { email, password } // Only email/password for admin registration
-  : { email, password, adminEmail: invitedAdmin || email }; // Only needed on login
-
-const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify(body),
-});
+          ? { email, password } // Register as admin
+          : { email, password, adminEmail: cleanAdmin || email }; // Login for admin or invited user
+  
+        const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(body),
+        });
   
         const data = await res.json();
         console.log("📥 Login response:", data);
-
   
         if (res.ok && data.success) {
-  message.style.color = "#4CAF50";
-  message.textContent = isRegistering ? "✅ Registered successfully!" : "✅ Logged in!";
-
-  if (isRegistering) {
-    // registration is always for admin
-    localStorage.setItem("isAdmin", "true");
-    localStorage.setItem("currentAdminEmail", email);
-    setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
-  } else if (data.role === "admin") {
-    localStorage.setItem("isAdmin", "true");
-    localStorage.setItem("currentAdminEmail", email);
-    setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
-  } else if (data.role === "user" && data.username) {
-    const cleanAdmin = (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") ? invitedAdmin : email;
-
-    localStorage.setItem("isAdmin", "false");
-    localStorage.setItem("currentAdminEmail", cleanAdmin);
-    localStorage.setItem("currentUser", data.username || invitedUser || "unknown");
-
-
-    setTimeout(() => {
-      window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${data.username}`;
-    }, 1000);
-  } else {
-    console.error("⚠️ Unknown role or missing username:", data);
-    message.style.color = "#D32F2F";
-    message.textContent = "❌ Login failed: Unexpected response";
-  }
-
-
-
+          message.style.color = "#4CAF50";
+          message.textContent = isRegistering ? "✅ Registered successfully!" : "✅ Logged in!";
+  
+          if (isRegistering || data.role === "admin") {
+            localStorage.setItem("isAdmin", "true");
+            localStorage.setItem("currentAdminEmail", email);
+            setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
+          } else if (data.role === "user" && data.username) {
+            const adminToUse = cleanAdmin || email;
+            const userToUse = data.username || invitedUser || "unknown";
+  
+            localStorage.setItem("isAdmin", "false");
+            localStorage.setItem("currentAdminEmail", adminToUse);
+            localStorage.setItem("currentUser", userToUse);
+  
+            setTimeout(() => {
+              window.location.href = `mobile/2-UserProfiles/users.html?admin=${adminToUse}&user=${userToUse}`;
+            }, 1000);
+          } else {
+            console.error("⚠️ Unexpected role or missing username:", data);
+            message.style.color = "#D32F2F";
+            message.textContent = "❌ Login failed: Unexpected response";
+          }
         } else {
           message.style.color = "#D32F2F";
           message.textContent = "❌ " + (data.message || "Something went wrong");
         }
       } catch (err) {
+        console.error("❌ Network error:", err);
         message.style.color = "#D32F2F";
         message.textContent = "❌ Error connecting to server";
       }
