--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register Z4</h2>
+    <h2 id="formTitle">Register 1</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -81,72 +81,65 @@
 
   <script>
     let isRegistering = true;
-  
     const urlParams = new URLSearchParams(window.location.search);
     const invitedAdmin = urlParams.get("admin");
     const invitedUser = urlParams.get("user");
-  
-    // ✅ Determine clean admin value
-    const cleanAdmin = (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined")
-      ? invitedAdmin
-      : null;
-  
-    // ✅ If valid, store admin email
-    if (cleanAdmin) {
-      localStorage.setItem("currentAdminEmail", cleanAdmin);
+
+    if (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") {
+      localStorage.setItem("currentAdminEmail", invitedAdmin);
     }
-  
+
     const form = document.getElementById("authForm");
     const message = document.getElementById("message");
-  
+
     function toggleForm() {
       isRegistering = !isRegistering;
       document.getElementById("formTitle").textContent = isRegistering ? "Register" : "Login";
       document.getElementById("submitBtn").textContent = isRegistering ? "Register" : "Login";
       document.getElementById("toggleText").textContent = isRegistering ? "Already have an account?" : "Don't have an account?";
     }
-  
+
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value.trim();
       const endpoint = isRegistering ? "/register" : "/login";
-  
+
       try {
         const body = isRegistering
-          ? { email, password } // Register as admin
-          : { email, password, adminEmail: cleanAdmin || email }; // Login for admin or invited user
-  
+          ? { email, password }
+          : { email, password, adminEmail: invitedAdmin || email };
+
         const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(body),
         });
-  
+
         const data = await res.json();
         console.log("📥 Login response:", data);
-  
+
         if (res.ok && data.success) {
           message.style.color = "#4CAF50";
           message.textContent = isRegistering ? "✅ Registered successfully!" : "✅ Logged in!";
-  
+
           if (isRegistering || data.role === "admin") {
             localStorage.setItem("isAdmin", "true");
             localStorage.setItem("currentAdminEmail", email);
             setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
-          } else if (data.role === "user" && data.username) {
-            const adminToUse = cleanAdmin || email;
-            const userToUse = data.username || invitedUser || "unknown";
-  
+          } else if (data.role === "user" && (data.username || invitedUser)) {
+            const cleanAdmin = invitedAdmin || email;
+            const finalUsername = data.username || invitedUser || "unknown";
+
             localStorage.setItem("isAdmin", "false");
-            localStorage.setItem("currentAdminEmail", adminToUse);
-            localStorage.setItem("currentUser", userToUse);
-  
+            localStorage.setItem("currentAdminEmail", cleanAdmin);
+            localStorage.setItem("currentUser", finalUsername);
+
             setTimeout(() => {
-              window.location.href = `mobile/2-UserProfiles/users.html?admin=${adminToUse}&user=${userToUse}`;
+              window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${finalUsername}`;
             }, 1000);
           } else {
-            console.error("⚠️ Unexpected role or missing username:", data);
+            console.error("⚠️ Unknown role or missing username:", data);
             message.style.color = "#D32F2F";
             message.textContent = "❌ Login failed: Unexpected response";
           }
@@ -155,13 +148,10 @@
           message.textContent = "❌ " + (data.message || "Something went wrong");
         }
       } catch (err) {
-        console.error("❌ Network error:", err);
         message.style.color = "#D32F2F";
         message.textContent = "❌ Error connecting to server";
       }
     });
   </script>
-  
-  
 </body>
 </html>
