--- a/register.html
+++ b/register.html
@@ -22,10 +22,6 @@
       width: 90%;
       max-width: 400px;
     }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
     input, button {
       width: 100%;
       margin: 10px 0;
@@ -66,7 +62,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register 1</h2>
+    <h2 id="formTitle">Register 312312</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -127,27 +123,26 @@
             localStorage.setItem("isAdmin", "true");
             localStorage.setItem("currentAdminEmail", email);
             setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
-          } else if (data.role === "user" && (data.username || invitedUser)) {
+          } else if (data.role === "user" && data.username) {
             const cleanAdmin = invitedAdmin || email;
-            const finalUsername = data.username || invitedUser || "unknown";
+            const cleanUser = data.username || invitedUser || "unknown";
 
             localStorage.setItem("isAdmin", "false");
             localStorage.setItem("currentAdminEmail", cleanAdmin);
-            localStorage.setItem("currentUser", finalUsername);
+            localStorage.setItem("currentUser", cleanUser);
 
             setTimeout(() => {
-              window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${finalUsername}`;
+              window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${cleanUser}`;
             }, 1000);
           } else {
-            console.error("⚠️ Unknown role or missing username:", data);
-            message.style.color = "#D32F2F";
-            message.textContent = "❌ Login failed: Unexpected response";
+            throw new Error("Unexpected login response format");
           }
         } else {
           message.style.color = "#D32F2F";
           message.textContent = "❌ " + (data.message || "Something went wrong");
         }
       } catch (err) {
+        console.error("❌ Login error:", err);
         message.style.color = "#D32F2F";
         message.textContent = "❌ Error connecting to server";
       }
