--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register 888</h2>
+    <h2 id="formTitle">Register 64312</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -102,7 +102,7 @@
       const password = document.getElementById("password").value.trim();
       const endpoint = isRegistering ? "/register" : "/login";
 
-      console.log(`📤 Sending request to ${endpoint} with email: ${email}`); // Debug log
+      console.log(`📤 Sending request to ${endpoint} with email: ${email}`);
 
       try {
         const body = isRegistering
