--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register 444</h2>
+    <h2 id="formTitle">Register Z111111111</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -81,84 +81,79 @@
 
   <script>
     let isRegistering = true;
-
+  
     const urlParams = new URLSearchParams(window.location.search);
     const invitedAdmin = urlParams.get("admin");
-    const invitedUser = urlParams.get("user");
+const invitedUser = urlParams.get("user");
 
-    // Only set invited admin if it's a real value (not "null" or "undefined")
-    if (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") {
-      localStorage.setItem("currentAdminEmail", invitedAdmin);
-    }
+// Only set invited admin if it's a real value (not "null" or "undefined")
+if (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") {
+  localStorage.setItem("currentAdminEmail", invitedAdmin);
+}
 
+  
     const form = document.getElementById("authForm");
     const message = document.getElementById("message");
-
+  
     function toggleForm() {
       isRegistering = !isRegistering;
       document.getElementById("formTitle").textContent = isRegistering ? "Register" : "Login";
       document.getElementById("submitBtn").textContent = isRegistering ? "Register" : "Login";
       document.getElementById("toggleText").textContent = isRegistering ? "Already have an account?" : "Don't have an account?";
     }
-
+  
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value.trim();
       const endpoint = isRegistering ? "/register" : "/login";
-
+  
       try {
         const body = isRegistering
-          ? { email, password } // Only email/password for admin registration
-          : { email, password, adminEmail: invitedAdmin || email }; // Only needed on login
+  ? { email, password } // Only email/password for admin registration
+  : { email, password, adminEmail: invitedAdmin || email }; // Only needed on login
 
-        const res = await fetch(`https://beemazing.onrender.com${endpoint}`, { // Fixed: Added quotes around the URL
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(body),
-        });
-
+const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify(body),
+});
+  
         const data = await res.json();
-        console.log("📥 Response:", data);
+        console.log("📥 Login response:", data);
 
+  
         if (res.ok && data.success) {
           message.style.color = "#4CAF50";
           message.textContent = isRegistering ? "✅ Registered successfully!" : "✅ Logged in!";
-
-          if (isRegistering) {
-            // Registration is always for admin
+  
+          if (data.role === "admin") {
             localStorage.setItem("isAdmin", "true");
             localStorage.setItem("currentAdminEmail", email);
             setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
-          } else if (data.role === "admin") {
-            localStorage.setItem("isAdmin", "true");
-            localStorage.setItem("currentAdminEmail", email);
-            setTimeout(() => window.location.href = "mobile/1-Home/home.html", 1000);
-          } else if (data.role === "user" && data.username) {
-            const cleanAdmin = (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") ? invitedAdmin : email;
-
-            localStorage.setItem("isAdmin", "false");
-            localStorage.setItem("currentAdminEmail", cleanAdmin);
-            localStorage.setItem("currentUser", data.username);
-
-            setTimeout(() => {
-              window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${data.username}`; // Fixed: Used template literals
-            }, 1000);
           } else {
-            console.error("⚠️ Unknown role or missing username:", data);
-            message.style.color = "#D32F2F";
-            message.textContent = "❌ Login failed: Unexpected response";
-          }
+  const cleanAdmin = (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") ? invitedAdmin : email;
+
+  localStorage.setItem("isAdmin", "false");
+  localStorage.setItem("currentAdminEmail", cleanAdmin);
+  localStorage.setItem("currentUser", data.username);
+
+  setTimeout(() => {
+    window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${data.username}`;
+  }, 1000);
+}
+
         } else {
           message.style.color = "#D32F2F";
           message.textContent = "❌ " + (data.message || "Something went wrong");
         }
       } catch (err) {
-        console.error("❌ Fetch error:", err); // Added: Log the error for debugging
         message.style.color = "#D32F2F";
         message.textContent = "❌ Error connecting to server";
       }
     });
   </script>
+  
+  
 </body>
 </html>
